Back In Time

Version 0.9.6
* add update snapshots button (Gnome & KDE4)

Version 0.9.4
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* gnome: better handling of 'take snapshot' status icon
* KDE4 (>= 4.1): first version (not finished)
* update man

Version 0.9.2
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* bug fix: if you add "/a" in include directories and "/a/b" in exclude patterns, "/a/b*" items
  are not excluded
* replace diff with rsync to check if a new snapshot is needed
* code cleanup
* add show hidden & backup files toggle button for files view
* bug fix: it does not include ".*" items even if they are not excluded
  (the items was included but not showed because hidden & backup files was never displayed
  in files view in previous versions)

Version 0.9
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
* make deb packages more debian friendly (thanks to Michael Wiedmann <mw@miwie.in-berlin.de>)
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* bug fix: when you open snapshots dialog for the second time ( or more ) and you make a diff 
  it will make the diff on the file for the first dialog ( all previous dialogs ) and then for 
  the current one
* better separation between common and gnome specific files and 
  divide backintime package in backintime-common & backintime-gnome
  (this will allow me to write other GUI front-ends like KDE4 or KDE)
* code cleanup

Version 0.8.20
* bug fix: sorting files/directories by name is now case insensitive
* getmessages.sh: ignore "gtk-" items (this are gtk stock item ids and should not be changed)

Version 0.8.18
* update man/docbook
* add sort columns in MainWindow/FileView (by name, by size or by date) and SnapshotsDialog (by date)