@@ -2,6 +2,7 @@ Back In Time
 
 Version 0.9.6
 * add update snapshots button (Gnome & KDE4)
+* GNOME: handle special folders icons (home, desktop)
 
 Version 0.9.4
 * update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
